--- a/minefield/index.html
+++ b/minefield/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <title>Minefield</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link type="image/x-icon" rel="shortcut icon" href="/x.png"/>
-    <link type="text/css" rel="stylesheet" href="minefield.css"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link type="image/png" rel="shortcut icon" href="/x.png">
+    <link type="text/css" rel="stylesheet" href="minefield.css">
 </head>
 <body></body>
 <script type="text/javascript" charset="utf-8" src="minefield.js"></script>
