--- a/balls/index.html
+++ b/balls/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>Balls</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
-    <link rel="shortcut icon" href="/x.png"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+    <link type="image/png" rel="shortcut icon" href="/x.png">
 </head>
 <body>
 <script type="text/javascript" charset="utf-8" src="balls.js"></script>
