--- a/whac-a-mole/index.html
+++ b/whac-a-mole/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
-    <link rel="shortcut icon" href="/x.png"/>
-    <link type="text/css" rel="stylesheet" href="game.css"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+    <link type="image/png" rel="shortcut icon" href="/x.png">
+    <link type="text/css" rel="stylesheet" href="game.css">
     <title>Whac-A-Mole</title>
 </head>
 <body>
@@ -22,5 +22,6 @@
 </div>
 <script type="text/javascript" src="requestAnimationFrame.js"></script>
 <script type="text/javascript" src="game.js"></script>
+<script type="text/javascript" charset="utf-8" src="/ba.js"></script>
 </body>
 </html>
