--- a/snake/index.html
+++ b/snake/index.html
@@ -4,7 +4,7 @@
     <title>Snake</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-    <link type="image/png" rel="shortcut icon" href="/x.png">
+    <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
     <link type="text/css" rel="stylesheet" href="game.css">
     <title>snake</title>
 </head>
