--- a/renju/index.html
+++ b/renju/index.html
@@ -5,16 +5,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
-    <link type="text/css" rel="stylesheet" href="renju.css">
+    <link type="text/css" rel="stylesheet" href="index.css">
 </head>
 <body>
-<div id="body">
-    <div class="board"></div>
-    <div id="chessPad"></div>
-    <div id="mousePad"></div>
-    <script type="text/javascript" charset="utf-8" src="renju.js"></script>
-</div>
-</body>
-<!--<script type="text/javascript" charset="utf-8" src="/ga.js"></script>-->
+<canvas class="canvas js-canvas"></canvas>
+<script type="module" src="index.js"></script>
 <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
+</body>
 </html>
