--- a/renju/index.html
+++ b/renju/index.html
@@ -8,7 +8,13 @@
     <link type="text/css" rel="stylesheet" href="index.css">
 </head>
 <body>
+<div class="title">Renju</div>
+<div class="status js-status"></div>
 <canvas class="canvas js-canvas"></canvas>
+<div class="buttons">
+    <div class="button js-restart">Restart</div>
+</div>
+<div class="copyright">© Copyright by vivaxy</div>
 <script type="module" src="index.js"></script>
 <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
 </body>
