refactor(renju): :art:Improved cursor render

--- a/renju/index.html
+++ b/renju/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="title">Renju</div>
-<div class="status js-status"></div>
+<div class="status js-status">Status: Ready!</div>
 <canvas class="canvas js-canvas"></canvas>
 <div class="buttons">
     <div class="button js-restart">Restart</div>
