--- a/eliminate/source/index.html
+++ b/eliminate/source/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <title>ELIMINATE</title>
-    <link type="image/png" rel="shortcut icon" href="/x.png"/>
+    <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
     <!-- build:css -->
     <link type="text/css" rel="stylesheet" href="css/game.css"/>
     <link type="text/css" rel="stylesheet" href="css/alert.css"/>
