--- a/renju/index.html
+++ b/renju/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
 <div class="title">Renju</div>
-<div class="status js-status">Status: Ready!</div>
-<canvas class="canvas js-canvas"></canvas>
-<div class="buttons">
-    <div class="button js-restart">Restart</div>
+<div class="buttons js-buttons">
+    <button class="button js-restart">Restart</button>
+    <button class="button js-undo">Undo</button>
 </div>
+<canvas class="canvas js-canvas"></canvas>
+<div class="status js-status">Status: Ready!</div>
 <div class="copyright">© Copyright by vivaxy</div>
 <script type="module" src="index.js"></script>
 <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
