feat(renju): :sparkles:Add ability to save status to url

--- a/renju/index.html
+++ b/renju/index.html
@@ -9,10 +9,7 @@
 </head>
 <body>
 <div class="title">Renju</div>
-<div class="buttons js-buttons">
-    <button class="button js-restart" disabled>Restart</button>
-    <button class="button js-undo" disabled>Undo</button>
-</div>
+<div class="buttons js-buttons"></div>
 <canvas class="canvas js-canvas"></canvas>
 <div class="status js-status">Status: Ready!</div>
 <div class="copyright">© Copyright by vivaxy</div>
