--- a/arkanoid/services/__tests__/collision.html
+++ b/arkanoid/services/__tests__/collision.html
@@ -7,6 +7,7 @@
   <title>Test Collision</title>
 </head>
 <body>
+<input type="range" />
 <canvas></canvas>
 <script type="module" src="collision.js"></script>
 <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
