chore(html): :memo:

--- a/goldrain/index.html
+++ b/goldrain/index.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
+<!DOCTYPE html><html><head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
   <link rel="shortcut icon" href="/x.png">
   <link type="text/css" rel="stylesheet" href="./index.css">
-  <title>Gold Rain</title></head>
+  <title>Gold Rain</title><meta name="author" content="vivaxy <xyxuye2007@126.com>"><meta name="keywords" content="vivaxy,game,goldrain"><meta name="description" content="Gold Rain"></head>
 <body>
 <div class="main-container">
   <canvas class="canvas"></canvas>
 </div>
 <script type="module" src="index.js"></script>
 <script type="text/javascript" src="/ba.js"></script>
-</body>
-</html>
+
+
+</body></html>
