--- a/jiugongge/index.html
+++ b/jiugongge/index.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
-  <link type="text/css" rel="stylesheet" href="./index.css"/>
+<!DOCTYPE html><html><head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+  <link type="text/css" rel="stylesheet" href="./index.css">
   <title>demo with pure js</title>
-</head>
+<meta name="author" content="vivaxy <xyxuye2007@126.com>"><meta name="keywords" content="vivaxy,game,jiugongge"><meta name="description" content="demo with pure js"></head>
 <body>
 <div class="jiugongge"></div>
 <button onclick="start()">开始</button>
 <button onclick="reset()">重置</button>
 <div class="console"></div>
 <script type="module" src="./index.js"></script>
-</body>
-</html>
+
+
+</body></html>
