--- a/snake/index.html
+++ b/snake/index.html
@@ -1,13 +1,11 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-    <title>Snake</title>
+<!DOCTYPE html><html><head>
+    
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
     <link type="text/css" rel="stylesheet" href="game.css">
-    <title>snake</title>
-</head>
+    
+<title>Snake</title><meta name="author" content="vivaxy <xyxuye2007@126.com>"><meta name="keywords" content="vivaxy,game,snake"><meta name="description" content="Snake"></head>
 <body>
 <div class="main-container">
     <div class="game-container">
@@ -17,7 +15,7 @@
         Swipe to start.
     </div>
 </div>
-</body>
+
 <script type="text/javascript" charset="utf-8" src="requestAnimationFrame.js"></script>
 <script type="text/javascript" charset="utf-8" src="input.js"></script>
 <script type="text/javascript" charset="utf-8" src="output.js"></script>
@@ -27,4 +25,5 @@
 <script type="text/javascript" charset="utf-8" src="game.js"></script>
 <script type="text/javascript" charset="utf-8" src="application.js"></script>
 <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
-</html>
+
+</body></html>
