--- a/tomcat/index.html
+++ b/tomcat/index.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
+<!DOCTYPE html><html><head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
     <link type="text/css" rel="stylesheet" href="index.css">
-    <title></title>
-</head>
+    <title>Tomcat</title>
+<meta name="author" content="vivaxy <xyxuye2007@126.com>"><meta name="keywords" content="vivaxy,game,tomcat"><meta name="description" content="Tomcat"></head>
 <body>
 <div class="container">
     <canvas class="canvas"></canvas>
@@ -25,5 +23,6 @@
 </div>
 <script type="text/javascript" src="index.js"></script>
 <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
-</body>
-</html>
+
+
+</body></html>
