--- a/arkanoid/index.html
+++ b/arkanoid/index.html
@@ -1,14 +1,13 @@
-<!DOCTYPE HTML>
-<html>
-<head>
+<!DOCTYPE html><html><head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
   <title>Arkanoid</title>
   <link rel="stylesheet" type="text/css" href="index.css">
-</head>
+<meta name="author" content="vivaxy <xyxuye2007@126.com>"><meta name="keywords" content="vivaxy,game,arkanoid"><meta name="description" content="Arkanoid"></head>
 <body>
 <canvas class="js-canvas"></canvas>
 <script type="module" src="index.js"></script>
-</body>
-</html>
+
+
+</body></html>
