--- a/catapult/index.html
+++ b/catapult/index.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
+<!DOCTYPE html><html><head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
   <link rel="shortcut icon" href="/x.png">
   <link type="text/css" rel="stylesheet" href="./index.css">
-  <title>catapult</title></head>
+  <title>catapult</title><meta name="author" content="vivaxy <xyxuye2007@126.com>"><meta name="keywords" content="vivaxy,game,catapult"><meta name="description" content="catapult"></head>
 <body>
 <div class="main container">
   <canvas class="canvas container"></canvas>
@@ -13,5 +11,6 @@
 </div>
 <script type="module" src="index.js"></script>
 <script type="text/javascript" src="/ba.js"></script>
-</body>
-</html>
+
+
+</body></html>
