--- a/eliminate/index.html
+++ b/eliminate/index.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+<!DOCTYPE html><html><head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <title>ELIMINATE</title>
   <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
-  <link type="text/css" rel="stylesheet" href="./index.css"/>
-</head>
+  <link type="text/css" rel="stylesheet" href="./index.css">
+<meta name="author" content="vivaxy <xyxuye2007@126.com>"><meta name="keywords" content="vivaxy,game,eliminate"><meta name="description" content="ELIMINATE"></head>
 <body>
 <div class="title generate">
   ELIMINATE
@@ -36,5 +34,6 @@
 </div>
 <script type="module" src="./index.js"></script>
 <script type="text/javascript" src="/ba.js"></script>
-</body>
-</html>
+
+
+</body></html>
