--- a/game-of-life/index.html
+++ b/game-of-life/index.html
@@ -1,12 +1,10 @@
-<!DOCTYPE HTML>
-<html>
-<head>
+<!DOCTYPE html><html><head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
   <link type="text/css" rel="stylesheet" href="index.css">
   <title>Game of Life</title>
-</head>
+<meta name="author" content="vivaxy <xyxuye2007@126.com>"><meta name="keywords" content="vivaxy,game,game-of-life"><meta name="description" content="Game of Life"></head>
 <body>
 <canvas class="js-canvas"></canvas>
 <div class="operation-container">
@@ -36,5 +34,6 @@
 </div>
 <script type="module" src="index.js"></script>
 <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
-</body>
-</html>
+
+
+</body></html>
