--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
-<!DOCTYPE HTML>
-<html>
-<head>
+<!DOCTYPE html><html><head>
     <title>game</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
     <link type="text/css" rel="stylesheet" href="/index.css">
-</head>
+<meta name="author" content="vivaxy <xyxuye2007@126.com>"><meta name="keywords" content="vivaxy,game,game"><meta name="description" content="game"></head>
 <body>
 <script type="text/javascript" charset="utf-8" src="/index.js"></script>
 <!--<script type="text/javascript" charset="utf-8" src="/ga.js"></script>-->
 <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
-</body>
-</html>
+
+
+</body></html>
