--- a/lights-out/index.html
+++ b/lights-out/index.html
@@ -1,15 +1,14 @@
-<!DOCTYPE HTML>
-<html>
-<head>
+<!DOCTYPE html><html><head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
   <link type="text/css" rel="stylesheet" href="index.css">
   <title>Lights Out</title>
-</head>
+<meta name="author" content="vivaxy <xyxuye2007@126.com>"><meta name="keywords" content="vivaxy,game,lights-out"><meta name="description" content="Lights Out"></head>
 <body>
 
 <script type="module" src="index.js"></script>
 <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
-</body>
-</html>
+
+
+</body></html>
