--- a/minefield/index.html
+++ b/minefield/index.html
@@ -1,16 +1,15 @@
-<!DOCTYPE HTML>
-<html>
-<head>
+<!DOCTYPE html><html><head>
     <title>Minefield</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
     <link type="text/css" rel="stylesheet" href="minefield.css">
-</head>
-<body></body>
+<meta name="author" content="vivaxy <xyxuye2007@126.com>"><meta name="keywords" content="vivaxy,game,minefield"><meta name="description" content="Minefield"></head>
+<body>
 <script type="text/javascript" charset="utf-8" src="minefield.js"></script>
 <script type="text/javascript" charset="utf-8" src="z.js"></script>
 <script type="text/javascript" charset="utf-8" src="x.js"></script>
 <!--<script type="text/javascript" charset="utf-8" src="/ga.js"></script>-->
 <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
-</html>
+
+</body></html>
