--- a/whac-a-mole/index.html
+++ b/whac-a-mole/index.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
+<!DOCTYPE html><html><head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
   <link type="text/css" rel="stylesheet" href="game.css">
   <title>Whac-A-Mole</title>
-</head>
+<meta name="author" content="vivaxy <xyxuye2007@126.com>"><meta name="keywords" content="vivaxy,game,whac-a-mole"><meta name="description" content="Whac-A-Mole"></head>
 <body>
 <div class="container">
   <canvas class="timer"></canvas>
@@ -22,5 +20,6 @@
 </div>
 <script type="text/javascript" src="game.js"></script>
 <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
-</body>
-</html>
+
+
+</body></html>
