--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
     <link type="text/css" rel="stylesheet" href="/index.css">
-<meta name="author" content="vivaxy <xyxuye2007@126.com>"><meta name="keywords" content="vivaxy,game,game"><meta name="description" content="game"></head>
+<meta name="author" content="vivaxy <xyxuye2007@126.com>"><meta name="keywords" content="vivaxy,game"><meta name="description" content="game"></head>
 <body>
 <script type="text/javascript" charset="utf-8" src="/index.js"></script>
 <!--<script type="text/javascript" charset="utf-8" src="/ga.js"></script>-->
