--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-    <title>game</title>
+    <title>Games</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
