feat(seo): add lang tag; add gtag.js

--- a/15-puzzle/index.html
+++ b/15-puzzle/index.html
@@ -1,14 +1,26 @@
-<!DOCTYPE html><html><head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-  <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
-  <title>15 Puzzle</title>
-  <link type="text/css" rel="stylesheet" href="index.css">
-<meta name="author" content="vivaxy <xyxuye2007@126.com>"><meta name="keywords" content="vivaxy,game,15-puzzle"><meta name="description" content="15 Puzzle"></head>
-<body>
-<canvas class="js-canvas"></canvas>
-<div class="js-score-container score-container">Scores are not available.</div>
-<script type="module" src="index.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
+    />
+    <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png" />
+    <title>15 Puzzle</title>
+    <link type="text/css" rel="stylesheet" href="index.css" />
+    <meta name="author" content="vivaxy <xyxuye2007@126.com>" />
+    <meta name="keywords" content="vivaxy,game,15-puzzle,games" />
+    <meta name="description" content="15 Puzzle" />
+  </head>
 
-
-</body></html>
+  <body>
+    <canvas class="js-canvas"></canvas>
+    <div class="js-score-container score-container">
+      Scores are not available.
+    </div>
+    <script type="module" src="index.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/gtag.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
+  </body>
+</html>
