--- a/catapult/index.html
+++ b/catapult/index.html
@@ -1,16 +1,26 @@
-<!DOCTYPE html><html><head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
-  <link rel="shortcut icon" href="/x.png">
-  <link type="text/css" rel="stylesheet" href="./index.css">
-  <title>catapult</title><meta name="author" content="vivaxy <xyxuye2007@126.com>"><meta name="keywords" content="vivaxy,game,catapult"><meta name="description" content="catapult"></head>
-<body>
-<div class="main container">
-  <canvas class="canvas container"></canvas>
-  <div class="hint container"></div>
-</div>
-<script type="module" src="index.js"></script>
-<script type="text/javascript" src="/ba.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"
+    />
+    <link rel="shortcut icon" href="/x.png" />
+    <link type="text/css" rel="stylesheet" href="./index.css" />
+    <title>catapult</title>
+    <meta name="author" content="vivaxy <xyxuye2007@126.com>" />
+    <meta name="keywords" content="vivaxy,game,catapult,games" />
+    <meta name="description" content="catapult" />
+  </head>
 
-
-</body></html>
+  <body>
+    <div class="main container">
+      <canvas class="canvas container"></canvas>
+      <div class="hint container"></div>
+    </div>
+    <script type="module" src="index.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/gtag.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
+  </body>
+</html>
