--- a/snake/index.html
+++ b/snake/index.html
@@ -1,29 +1,35 @@
-<!DOCTYPE html><html><head>
-    
+<!DOCTYPE html><html lang="en"><head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
     <link type="text/css" rel="stylesheet" href="game.css">
-    
-<title>Snake</title><meta name="author" content="vivaxy <xyxuye2007@126.com>"><meta name="keywords" content="vivaxy,game,snake"><meta name="description" content="Snake"></head>
-<body>
-<div class="main-container">
-    <div class="game-container">
-        <canvas class="game-canvas"></canvas>
-    </div>
-    <div class="hint-container">
-        Swipe to start.
-    </div>
-</div>
 
-<script type="text/javascript" charset="utf-8" src="requestAnimationFrame.js"></script>
-<script type="text/javascript" charset="utf-8" src="input.js"></script>
-<script type="text/javascript" charset="utf-8" src="output.js"></script>
-<script type="text/javascript" charset="utf-8" src="grid.js"></script>
-<script type="text/javascript" charset="utf-8" src="snake.js"></script>
-<script type="text/javascript" charset="utf-8" src="food.js"></script>
-<script type="text/javascript" charset="utf-8" src="game.js"></script>
-<script type="text/javascript" charset="utf-8" src="application.js"></script>
-<script type="text/javascript" charset="utf-8" src="/ba.js"></script>
+    <title>Snake</title>
+    <meta name="author" content="vivaxy <xyxuye2007@126.com>">
+    <meta name="keywords" content="vivaxy,game,snake,games">
+    <meta name="description" content="Snake">
+  </head>
+
+  <body>
+    <div class="main-container">
+      <div class="game-container">
+        <canvas class="game-canvas"></canvas>
+      </div>
+      <div class="hint-container">
+        Swipe to start.
+      </div>
+    </div>
+
+    <script type="text/javascript" charset="utf-8" src="requestAnimationFrame.js"></script>
+    <script type="text/javascript" charset="utf-8" src="input.js"></script>
+    <script type="text/javascript" charset="utf-8" src="output.js"></script>
+    <script type="text/javascript" charset="utf-8" src="grid.js"></script>
+    <script type="text/javascript" charset="utf-8" src="snake.js"></script>
+    <script type="text/javascript" charset="utf-8" src="food.js"></script>
+    <script type="text/javascript" charset="utf-8" src="game.js"></script>
+    <script type="text/javascript" charset="utf-8" src="application.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/gtag.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
+  
 
 </body></html>
