--- a/arkanoid/services/__tests__/collision.html
+++ b/arkanoid/services/__tests__/collision.html
@@ -1,15 +1,19 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-  <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
-  <title>Test Collision</title>
-</head>
-<body>
-<input type="range" />
-<canvas></canvas>
-<script type="module" src="collision.js"></script>
-<script type="text/javascript" charset="utf-8" src="/ba.js"></script>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
+    />
+    <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png" />
+    <title>Test Collision</title>
+  </head>
+  <body>
+    <input type="range" />
+    <canvas></canvas>
+    <script type="module" src="collision.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/gtag.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
+  </body>
 </html>
