--- a/eliminate/index.html
+++ b/eliminate/index.html
@@ -1,39 +1,48 @@
-<!DOCTYPE html><html><head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-  <title>ELIMINATE</title>
-  <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
-  <link type="text/css" rel="stylesheet" href="./index.css">
-<meta name="author" content="vivaxy <xyxuye2007@126.com>"><meta name="keywords" content="vivaxy,game,eliminate"><meta name="description" content="ELIMINATE"></head>
-<body>
-<div class="title generate">
-  ELIMINATE
-</div>
-<div class="header">
-  <div class="score">
-    <p class="underline">REMAINING</p>
-    <p class="remaining"></p>
-  </div>
-  <div class="score">
-    <p class="underline">SCORE</p>
-    <p class="now"></p>
-  </div>
-  <div class="score">
-    <p class="underline">BEST</p>
-    <p class="best"></p>
-  </div>
-</div>
-<canvas></canvas>
-<div class="alert hide">
-  <div class="buttons">
-    <div class="button restart">RESTART</div>
-  </div>
-</div>
-<div class="title save">
-  © Copyright by vivaxy
-</div>
-<script type="module" src="./index.js"></script>
-<script type="text/javascript" src="/ba.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
+    />
+    <title>ELIMINATE</title>
+    <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png" />
+    <link type="text/css" rel="stylesheet" href="./index.css" />
+    <meta name="author" content="vivaxy <xyxuye2007@126.com>" />
+    <meta name="keywords" content="vivaxy,game,eliminate,games" />
+    <meta name="description" content="ELIMINATE" />
+  </head>
 
-
-</body></html>
+  <body>
+    <div class="title generate">
+      ELIMINATE
+    </div>
+    <div class="header">
+      <div class="score">
+        <p class="underline">REMAINING</p>
+        <p class="remaining"></p>
+      </div>
+      <div class="score">
+        <p class="underline">SCORE</p>
+        <p class="now"></p>
+      </div>
+      <div class="score">
+        <p class="underline">BEST</p>
+        <p class="best"></p>
+      </div>
+    </div>
+    <canvas></canvas>
+    <div class="alert hide">
+      <div class="buttons">
+        <div class="button restart">RESTART</div>
+      </div>
+    </div>
+    <div class="title save">
+      © Copyright by vivaxy
+    </div>
+    <script type="module" src="./index.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/gtag.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
+  </body>
+</html>
