--- a/flappy-bird/index.html
+++ b/flappy-bird/index.html
@@ -1,13 +1,23 @@
-<!DOCTYPE html><html><head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-  <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
-  <title>Flappy Bird</title>
-  <link rel="stylesheet" type="text/css" href="index.css">
-<meta name="author" content="vivaxy <xyxuye2007@126.com>"><meta name="keywords" content="vivaxy,game,flappy-bird"><meta name="description" content="Flappy Bird"></head>
-<body>
-<canvas></canvas>
-<script type="module" src="index.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
+    />
+    <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png" />
+    <title>Flappy Bird</title>
+    <link rel="stylesheet" type="text/css" href="index.css" />
+    <meta name="author" content="vivaxy <xyxuye2007@126.com>" />
+    <meta name="keywords" content="vivaxy,game,flappy-bird,games" />
+    <meta name="description" content="Flappy Bird" />
+  </head>
 
-
-</body></html>
+  <body>
+    <canvas></canvas>
+    <script type="module" src="index.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/gtag.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
+  </body>
+</html>
