--- a/game-of-life/index.html
+++ b/game-of-life/index.html
@@ -1,39 +1,43 @@
-<!DOCTYPE html><html><head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-  <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
-  <link type="text/css" rel="stylesheet" href="index.css">
-  <title>Game of Life</title>
-<meta name="author" content="vivaxy <xyxuye2007@126.com>"><meta name="keywords" content="vivaxy,game,game-of-life"><meta name="description" content="Game of Life"></head>
-<body>
-<canvas class="js-canvas"></canvas>
-<div class="operation-container">
-  <div class="operation-item">
-    <label>Game</label>
-    <button class="js-game-status" disabled></button>
-  </div>
-  <div class="operation-item">
-    <label>Speed</label>
-    <button class="js-speed-down">-</button>
-    <!--<span class="js-speed-value"></span>-->
-    <button class="js-speed-up">+</button>
-    <!--<span>fps</span>-->
-  </div>
-  <div class="operation-item">
-    <label>Dimension</label>
-    <button class="js-dimension-down">-</button>
-    <!--<span class="js-dimension-value"></span>-->
-    <button class="js-dimension-up">+</button>
-    <!--<span>upp</span>-->
-  </div>
-  <div class="operation-item">
-    <label>Pattern</label>
-    <select class="js-pattern-select">
-    </select>
-  </div>
-</div>
-<script type="module" src="index.js"></script>
-<script type="text/javascript" charset="utf-8" src="/ba.js"></script>
+<!DOCTYPE html><html lang="en"><head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+    <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
+    <link type="text/css" rel="stylesheet" href="index.css">
+    <title>Game of Life</title>
+    <meta name="author" content="vivaxy <xyxuye2007@126.com>">
+    <meta name="keywords" content="vivaxy,game,game-of-life,games">
+    <meta name="description" content="Game of Life">
+  </head>
 
+  <body>
+    <canvas class="js-canvas"></canvas>
+    <div class="operation-container">
+      <div class="operation-item">
+        <label>Game</label>
+        <button class="js-game-status" disabled></button>
+      </div>
+      <div class="operation-item">
+        <label>Speed</label>
+        <button class="js-speed-down">-</button>
+        <!--<span class="js-speed-value"></span>-->
+        <button class="js-speed-up">+</button>
+        <!--<span>fps</span>-->
+      </div>
+      <div class="operation-item">
+        <label>Dimension</label>
+        <button class="js-dimension-down">-</button>
+        <!--<span class="js-dimension-value"></span>-->
+        <button class="js-dimension-up">+</button>
+        <!--<span>upp</span>-->
+      </div>
+      <div class="operation-item">
+        <label>Pattern</label>
+        <select class="js-pattern-select"> </select>
+      </div>
+    </div>
+    <script type="module" src="index.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/gtag.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
+  
 
 </body></html>
