--- a/klotski/index.html
+++ b/klotski/index.html
@@ -1,21 +1,30 @@
-<!DOCTYPE html><html><head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-  <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
-  <link type="text/css" rel="stylesheet" href="index.css">
-  <title>klotski</title>
-<meta name="author" content="vivaxy <xyxuye2007@126.com>"><meta name="keywords" content="vivaxy,game,klotski"><meta name="description" content="klotski"></head>
-<body>
-<div class="header">KLOTSKI</div>
-<div class="step-container">
-  <div><span class="step">0</span>steps</div>
-</div>
-<div class="game-container">
-  <div class="inner-container"></div>
-</div>
-<div class="footer">© Copyright by vivaxy</div>
-<script type="module" src="index.js"></script>
-<script type="text/javascript" src="/ba.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
+    />
+    <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png" />
+    <link type="text/css" rel="stylesheet" href="index.css" />
+    <title>klotski</title>
+    <meta name="author" content="vivaxy <xyxuye2007@126.com>" />
+    <meta name="keywords" content="vivaxy,game,klotski,games" />
+    <meta name="description" content="klotski" />
+  </head>
 
-
-</body></html>
+  <body>
+    <div class="header">KLOTSKI</div>
+    <div class="step-container">
+      <div><span class="step">0</span>steps</div>
+    </div>
+    <div class="game-container">
+      <div class="inner-container"></div>
+    </div>
+    <div class="footer">© Copyright by vivaxy</div>
+    <script type="module" src="index.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/gtag.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
+  </body>
+</html>
