--- a/renju/index.html
+++ b/renju/index.html
@@ -1,18 +1,23 @@
-<!DOCTYPE html><html><head>
-  <title>Renju</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-  <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
-  <link type="text/css" rel="stylesheet" href="index.css">
-<meta name="author" content="vivaxy <xyxuye2007@126.com>"><meta name="keywords" content="vivaxy,game,renju"><meta name="description" content="Renju"></head>
-<body>
-<div class="title">Renju</div>
-<div class="buttons js-buttons"></div>
-<canvas class="canvas js-canvas"></canvas>
-<div class="status js-status">Status: Ready!</div>
-<div class="copyright">© Copyright by vivaxy</div>
-<script type="module" src="index.js"></script>
-<script type="text/javascript" charset="utf-8" src="/ba.js"></script>
+<!DOCTYPE html><html lang="en"><head>
+    <title>Renju</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+    <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
+    <link type="text/css" rel="stylesheet" href="index.css">
+    <meta name="author" content="vivaxy <xyxuye2007@126.com>">
+    <meta name="keywords" content="vivaxy,game,renju,games">
+    <meta name="description" content="Renju">
+  </head>
 
+  <body>
+    <div class="title">Renju</div>
+    <div class="buttons js-buttons"></div>
+    <canvas class="canvas js-canvas"></canvas>
+    <div class="status js-status">Status: Ready!</div>
+    <div class="copyright">© Copyright by vivaxy</div>
+    <script type="module" src="index.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/gtag.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
+  
 
 </body></html>
