--- a/tomcat/index.html
+++ b/tomcat/index.html
@@ -1,28 +1,33 @@
-<!DOCTYPE html><html><head>
+<!DOCTYPE html><html lang="en"><head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
     <link type="text/css" rel="stylesheet" href="index.css">
     <title>Tomcat</title>
-<meta name="author" content="vivaxy <xyxuye2007@126.com>"><meta name="keywords" content="vivaxy,game,tomcat"><meta name="description" content="Tomcat"></head>
-<body>
-<div class="container">
-    <canvas class="canvas"></canvas>
-    <div class="cymbal button"></div>
-    <div class="fart button"></div>
-    <div class="eat button"></div>
-    <div class="drink button"></div>
-    <div class="scratch button"></div>
-    <div class="pie button"></div>
-</div>
-<div class="loading-container">
-    <div class="loading-text loading-text-outer">LOADING...</div>
-    <div class="loading">
-        <div class="loading-text loading-text-inner">LOADING...</div>
-    </div>
-</div>
-<script type="text/javascript" src="index.js"></script>
-<script type="text/javascript" charset="utf-8" src="/ba.js"></script>
+    <meta name="author" content="vivaxy <xyxuye2007@126.com>">
+    <meta name="keywords" content="vivaxy,game,tomcat,games">
+    <meta name="description" content="Tomcat">
+  </head>
 
+  <body>
+    <div class="container">
+      <canvas class="canvas"></canvas>
+      <div class="cymbal button"></div>
+      <div class="fart button"></div>
+      <div class="eat button"></div>
+      <div class="drink button"></div>
+      <div class="scratch button"></div>
+      <div class="pie button"></div>
+    </div>
+    <div class="loading-container">
+      <div class="loading-text loading-text-outer">LOADING...</div>
+      <div class="loading">
+        <div class="loading-text loading-text-inner">LOADING...</div>
+      </div>
+    </div>
+    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/gtag.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
+  
 
 </body></html>
