--- a/snake/index.html
+++ b/snake/index.html
@@ -1,13 +1,18 @@
-<!DOCTYPE html><html lang="en"><head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-    <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
-    <link type="text/css" rel="stylesheet" href="game.css">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
+    />
+    <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png" />
+    <link type="text/css" rel="stylesheet" href="game.css" />
 
     <title>Snake</title>
-    <meta name="author" content="vivaxy <xyxuye2007@126.com>">
-    <meta name="keywords" content="vivaxy,game,snake,games">
-    <meta name="description" content="Snake">
+    <meta name="author" content="vivaxy <xyxuye2007@126.com>" />
+    <meta name="keywords" content="vivaxy,game,snake,games" />
+    <meta name="description" content="Snake" />
   </head>
 
   <body>
@@ -20,16 +25,22 @@
       </div>
     </div>
 
-    <script type="text/javascript" charset="utf-8" src="requestAnimationFrame.js"></script>
+    <script
+      type="text/javascript"
+      charset="utf-8"
+      src="requestAnimationFrame.js"
+    ></script>
     <script type="text/javascript" charset="utf-8" src="input.js"></script>
     <script type="text/javascript" charset="utf-8" src="output.js"></script>
     <script type="text/javascript" charset="utf-8" src="grid.js"></script>
     <script type="text/javascript" charset="utf-8" src="snake.js"></script>
     <script type="text/javascript" charset="utf-8" src="food.js"></script>
     <script type="text/javascript" charset="utf-8" src="game.js"></script>
-    <script type="text/javascript" charset="utf-8" src="application.js"></script>
-    <script type="text/javascript" charset="utf-8" src="/gtag.js"></script>
-    <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
-  
-
-</body></html>
+    <script
+      type="text/javascript"
+      charset="utf-8"
+      src="application.js"
+    ></script>
+    <script type="text/javascript" charset="utf-8" src="/cm.js"></script>
+  </body>
+</html>
