--- a/arkanoid/index.html
+++ b/arkanoid/index.html
@@ -17,7 +17,6 @@
   <body>
     <canvas class="js-canvas"></canvas>
     <script type="module" src="index.js"></script>
-    <script type="text/javascript" charset="utf-8" src="/gtag.js"></script>
-    <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/cm.js"></script>
   </body>
 </html>
