--- a/arkanoid/services/__tests__/collision.html
+++ b/arkanoid/services/__tests__/collision.html
@@ -13,7 +13,6 @@
     <input type="range" />
     <canvas></canvas>
     <script type="module" src="collision.js"></script>
-    <script type="text/javascript" charset="utf-8" src="/gtag.js"></script>
-    <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/cm.js"></script>
   </body>
 </html>
