--- a/balls/index.html
+++ b/balls/index.html
@@ -1,18 +1,21 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
     <title>Balls</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-    <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
-    <link type="text/css" rel="stylesheet" href="index.css">
-    <meta name="author" content="vivaxy <xyxuye2007@126.com>">
-    <meta name="keywords" content="vivaxy,game,balls,games">
-    <meta name="description" content="Balls">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
+    />
+    <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png" />
+    <link type="text/css" rel="stylesheet" href="index.css" />
+    <meta name="author" content="vivaxy <xyxuye2007@126.com>" />
+    <meta name="keywords" content="vivaxy,game,balls,games" />
+    <meta name="description" content="Balls" />
   </head>
 
   <body>
     <script type="module" charset="utf-8" src="index.js"></script>
-    <script type="text/javascript" charset="utf-8" src="/gtag.js"></script>
-    <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
-  
-
-</body></html>
+    <script type="text/javascript" charset="utf-8" src="/cm.js"></script>
+  </body>
+</html>
