--- a/klotski/index.html
+++ b/klotski/index.html
@@ -24,7 +24,6 @@
     </div>
     <div class="footer">© Copyright by vivaxy</div>
     <script type="module" src="index.js"></script>
-    <script type="text/javascript" charset="utf-8" src="/gtag.js"></script>
-    <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/cm.js"></script>
   </body>
 </html>
