--- a/whac-a-mole/index.html
+++ b/whac-a-mole/index.html
@@ -1,12 +1,17 @@
-<!DOCTYPE html><html lang="en"><head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-    <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png">
-    <link type="text/css" rel="stylesheet" href="game.css">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
+    />
+    <link type="image/png" rel="shortcut icon" href="/vivaxy.icon.png" />
+    <link type="text/css" rel="stylesheet" href="game.css" />
     <title>Whac-A-Mole</title>
-    <meta name="author" content="vivaxy <xyxuye2007@126.com>">
-    <meta name="keywords" content="vivaxy,game,whac-a-mole,games">
-    <meta name="description" content="Whac-A-Mole">
+    <meta name="author" content="vivaxy <xyxuye2007@126.com>" />
+    <meta name="keywords" content="vivaxy,game,whac-a-mole,games" />
+    <meta name="description" content="Whac-A-Mole" />
   </head>
 
   <body>
@@ -23,8 +28,6 @@
       <a class="restart">NEW GAME</a>
     </div>
     <script type="text/javascript" src="game.js"></script>
-    <script type="text/javascript" charset="utf-8" src="/gtag.js"></script>
-    <script type="text/javascript" charset="utf-8" src="/ba.js"></script>
-  
-
-</body></html>
+    <script type="text/javascript" charset="utf-8" src="/cm.js"></script>
+  </body>
+</html>
